# ioctl-parser

./: .appveyor.yml  .gitignore  CMakeLists.txt  LICENSE.txt  README.md  example.ini  generate-ioctls.py  main.cpp
resources/: IOCTLs.ini  icon.rc  manifest.qrc
widgets/: HexSpinBox.hpp  MainWindow.cpp  MainWindow.hpp  MainWindow.ui
